k8s/storage.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: storage
  namespace: opendrive
spec:
  serviceName: storage
  replicas: 1
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: minio
          image: git.ombrage.space/opendrive/storage:latest
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: storage-data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 2
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 5
      volumes:
        - name: storage-data
          persistentVolumeClaim:
            claimName: storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: storage
  namespace: opendrive
spec:
  selector:
    app: storage
  ports:
    - name: minio
      port: 9000
      targetPort: 9000
  type: ClusterIP
